# cfgx

./: AGENTS.md  README.md  pyproject.toml  zensical.toml
.github/workflows/: publish.yml
docs/: api.md  cli.md  index.md
src/cfgx/: config.py
tests/: test_cli.py  test_config_loader.py  test_config_utils.py
