[project]
name = "cfgx"
version = "0.1.0"
description = "Python-first config loader with composition and CLI overrides."
readme = "README.md"
authors = [
    { name = "Karim Abou Zeid", email = "contact@ka.codes" }
]
requires-python = ">=3.10"
dependencies = [
    "ruff>=0.14.3",
]

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "ruff>=0.11.13",
    "zensical>=0.0.10",
    "mkdocstrings-python>=2.0.1",
]
